sigar-sys/src/ffi.rs

#[test]
fn bindgen_test_layout_sigar_file_system_usage_t() {
    assert_eq!(
        ::std::mem::size_of::<sigar_file_system_usage_t>(),
        144usize,
        concat!("Size of: ", stringify!(sigar_file_system_usage_t))
    );
    assert_eq!(
        ::std::mem::align_of::<sigar_file_system_usage_t>(),
        8usize,
        concat!("Alignment of ", stringify!(sigar_file_system_usage_t))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sigar_file_system_usage_t>())).disk as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_file_system_usage_t),
            "::",
            stringify!(disk)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<sigar_file_system_usage_t>())).use_percent as *const _ as usize
        },
        88usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_file_system_usage_t),
            "::",
            stringify!(use_percent)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sigar_file_system_usage_t>())).total as *const _ as usize },
        96usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_file_system_usage_t),
            "::",
            stringify!(total)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sigar_file_system_usage_t>())).free as *const _ as usize },
        104usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_file_system_usage_t),
            "::",
            stringify!(free)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sigar_file_system_usage_t>())).used as *const _ as usize },
        112usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_file_system_usage_t),
            "::",
            stringify!(used)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sigar_file_system_usage_t>())).avail as *const _ as usize },
        120usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_file_system_usage_t),
            "::",
            stringify!(avail)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sigar_file_system_usage_t>())).files as *const _ as usize },
        128usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_file_system_usage_t),
            "::",
            stringify!(files)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<sigar_file_system_usage_t>())).free_files as *const _ as usize
        },
        136usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_file_system_usage_t),
            "::",
            stringify!(free_files)
        )
    );
}
extern "C" {
    pub fn sigar_file_system_usage_get(
        sigar: *mut sigar_t,
        dirname: *const ::std::os::raw::c_char,
        fsusage: *mut sigar_file_system_usage_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn sigar_disk_usage_get(
        sigar: *mut sigar_t,
        name: *const ::std::os::raw::c_char,
        disk: *mut sigar_disk_usage_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn sigar_file_system_ping(
        sigar: *mut sigar_t,
        fs: *mut sigar_file_system_t,
    ) -> ::std::os::raw::c_int;
}
#[repr(C)]
#[derive(Copy, Clone)]
pub struct sigar_net_address_t {
    pub family: sigar_net_address_t__bindgen_ty_1,
    pub addr: sigar_net_address_t__bindgen_ty_2,
}
pub const sigar_net_address_t_SIGAR_AF_UNSPEC: sigar_net_address_t__bindgen_ty_1 = 0;
pub const sigar_net_address_t_SIGAR_AF_INET: sigar_net_address_t__bindgen_ty_1 = 1;
pub const sigar_net_address_t_SIGAR_AF_INET6: sigar_net_address_t__bindgen_ty_1 = 2;
pub const sigar_net_address_t_SIGAR_AF_LINK: sigar_net_address_t__bindgen_ty_1 = 3;
pub type sigar_net_address_t__bindgen_ty_1 = u32;
#[repr(C)]
#[derive(Copy, Clone)]
pub union sigar_net_address_t__bindgen_ty_2 {
    pub in_: sigar_uint32_t,
    pub in6: [sigar_uint32_t; 4usize],
    pub mac: [::std::os::raw::c_uchar; 8usize],
    _bindgen_union_align: [u32; 4usize],
}
#[test]
fn bindgen_test_layout_sigar_net_address_t__bindgen_ty_2() {
    assert_eq!(
        ::std::mem::size_of::<sigar_net_address_t__bindgen_ty_2>(),
        16usize,
        concat!("Size of: ", stringify!(sigar_net_address_t__bindgen_ty_2))
    );
    assert_eq!(
        ::std::mem::align_of::<sigar_net_address_t__bindgen_ty_2>(),
        4usize,
        concat!(
            "Alignment of ",
            stringify!(sigar_net_address_t__bindgen_ty_2)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<sigar_net_address_t__bindgen_ty_2>())).in_ as *const _ as usize
        },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_net_address_t__bindgen_ty_2),
            "::",
            stringify!(in_)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<sigar_net_address_t__bindgen_ty_2>())).in6 as *const _ as usize
        },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_net_address_t__bindgen_ty_2),
            "::",
            stringify!(in6)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<sigar_net_address_t__bindgen_ty_2>())).mac as *const _ as usize
        },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_net_address_t__bindgen_ty_2),
            "::",
            stringify!(mac)
        )
    );
}
impl Default for sigar_net_address_t__bindgen_ty_2 {
    fn default() -> Self {
        unsafe { ::std::mem::zeroed() }
    }
}
#[test]
fn bindgen_test_layout_sigar_net_address_t() {
    assert_eq!(
        ::std::mem::size_of::<sigar_net_address_t>(),
        20usize,
        concat!("Size of: ", stringify!(sigar_net_address_t))
    );
    assert_eq!(
        ::std::mem::align_of::<sigar_net_address_t>(),
        4usize,
        concat!("Alignment of ", stringify!(sigar_net_address_t))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sigar_net_address_t>())).family as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_net_address_t),
            "::",
            stringify!(family)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sigar_net_address_t>())).addr as *const _ as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_net_address_t),
            "::",
            stringify!(addr)
        )
    );
}
impl Default for sigar_net_address_t {
    fn default() -> Self {
        unsafe { ::std::mem::zeroed() }
    }
}
#[repr(C)]
#[derive(Copy, Clone)]
pub struct sigar_net_info_t {
    pub default_gateway: [::std::os::raw::c_char; 46usize],
    pub default_gateway_interface: [::std::os::raw::c_char; 256usize],
    pub host_name: [::std::os::raw::c_char; 256usize],
    pub domain_name: [::std::os::raw::c_char; 256usize],
    pub primary_dns: [::std::os::raw::c_char; 46usize],
    pub secondary_dns: [::std::os::raw::c_char; 46usize],
}
#[test]
fn bindgen_test_layout_sigar_net_info_t() {
    assert_eq!(
        ::std::mem::size_of::<sigar_net_info_t>(),
        906usize,
        concat!("Size of: ", stringify!(sigar_net_info_t))
    );
    assert_eq!(
        ::std::mem::align_of::<sigar_net_info_t>(),
        1usize,
        concat!("Alignment of ", stringify!(sigar_net_info_t))
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<sigar_net_info_t>())).default_gateway as *const _ as usize
        },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_net_info_t),
            "::",
            stringify!(default_gateway)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<sigar_net_info_t>())).default_gateway_interface as *const _
                as usize
        },
        46usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_net_info_t),
            "::",
            stringify!(default_gateway_interface)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sigar_net_info_t>())).host_name as *const _ as usize },
        302usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_net_info_t),
            "::",
            stringify!(host_name)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sigar_net_info_t>())).domain_name as *const _ as usize },
        558usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_net_info_t),
            "::",
            stringify!(domain_name)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sigar_net_info_t>())).primary_dns as *const _ as usize },
        814usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_net_info_t),
            "::",
            stringify!(primary_dns)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sigar_net_info_t>())).secondary_dns as *const _ as usize },
        860usize,
        concat!(
            "Offset of field: ",
            stringify!(sigar_net_info_t),
            "::",
            stringify!(secondary_dns)
        )
    );
}
impl Default for sigar_net_info_t {
    fn default() -> Self {
        unsafe { ::std::mem::zeroed() }
    }
}
extern "C" {
    pub fn sigar_net_info_get(
        sigar: *mut sigar_t,
        netinfo: *mut sigar_net_info_t,
    ) -> ::std::os::raw::c_int;
}
#[repr(C)]
#[derive(Copy, Clone)]
pub struct sigar_net_route_t {
    pub destination: sigar_net_address_t,
    pub gateway: sigar_net_address_t,
    pub mask: sigar_net_address_t,
    pub flags: sigar_uint64_t,
    pub refcnt: sigar_uint64_t,
    pub use_: sigar_uint64_t,
    pub metric: sigar_uint64_t,
    pub mtu: sigar_uint64_t,
    pub window: sigar_uint64_t,
    pub irtt: sigar_uint64_t,
    pub ifname: [::std::os::raw::c_char; 256usize],
}
